--- a/package.json
+++ b/package.json
@@ -7,9 +7,14 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^1.2.2",
     "core-js": "^3.8.3",
+    "swiper": "^8.4.5",
     "vue": "^3.2.13",
+    "vue-carousel-3d": "^1.0.1",
     "vue-router": "^4.0.3",
+    "vue3-carousel": "^0.2.9",
+    "vue3-carousel-3d": "^1.0.4",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
